# eqs

./: .gitignore  README.md
omelette-original/: Cargo.toml  InfLang.py  LambdaLang.py  Makefile  MathLang.py  PropLang.py  PropLang_weights.pt  README.md  environment.yml  expr_explode.py  gen.sh  lambdafail.py  ppo.py  pretrain.py  pyproject.toml  test_all.py  viz.py  weights.pt
omelette-original/dataset_metrics/: MathLang_0_egg  MathLang_0_norebase  MathLang_0_omfixed  MathLang_10_egg  MathLang_10_norebase  MathLang_10_om  MathLang_10_omfixed  MathLang_11_egg  MathLang_11_norebase  MathLang_11_om  MathLang_11_omfixed  MathLang_12_egg  MathLang_12_norebase  MathLang_12_om  MathLang_12_omfixed  MathLang_13_egg  MathLang_13_norebase  MathLang_13_om  MathLang_13_omfixed  MathLang_14_egg  MathLang_14_norebase  MathLang_14_om  MathLang_14_omfixed  MathLang_15_egg  MathLang_15_norebase  MathLang_15_om  MathLang_15_omfixed  MathLang_16_egg  MathLang_16_norebase  MathLang_16_om  MathLang_16_omfixed  MathLang_17_egg  MathLang_17_norebase  MathLang_17_om  MathLang_17_omfixed  MathLang_18_egg  MathLang_18_norebase  MathLang_18_om  MathLang_18_omfixed  MathLang_19_egg  (+202 more)
omelette-original/notebooks/: figures.ipynb
omelette-original/notebooks/MathLang/: 4b49f666b553473d81d2db699d0f48c7_0.pt  4b49f666b553473d81d2db699d0f48c7_1.pt  (+6 more)
omelette-original/rejoice/: PretrainingDataset.py  __init__.py  explain.py  graph_space.py  lib.py  networks.py  pretrain_dataset_gen.py  rejoice.pyi  util.py
omelette-original/src/: lib.rs
rust-lib/: Cargo.toml  pyproject.toml
rust-lib/src/: lib.rs
(+400 files in other folders)
