[package]
name = "rejoice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rejoice"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module", "serde"] }
egg = { version = "0.8.1", features = ["serde-1"] }
log = "0.4.17"
env_logger = "0.9.0"
serde = "1.0.137"
serde_json = "1.0"
hashbrown = "0.11"
once_cell = "1"
symbol_table = "0.1.0"
bincode = "1.3.3"
pyo3-log = "0.6.0"
